--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -9,12 +9,17 @@
 					<span class="table-header-description" th:utext="#{site.goto.home}">Description</span>
 				</span>
 				<div class="help-content" th:with="desc=#{site.help.command.digest.desc}">
-					<h2 id="commands" class="help-title">
-						<a href="#commands" th:title="#{site.help.title.commands}">#</a>
-						<span th:text="#{site.help.title.commands}">User Commands</span>
+					<h2 id="about" class="help-title">
+						<a href="#about" th:title="#{site.help.title.about}">#</a>
+						<span th:text="#{site.help.title.about}">About Service</span>
 						<span class="help-navigation">
 							<a href="#down" class="copyright" th:title="#{site.help.down.title}" th:text="#{site.help.down}">Go Down</a>
 						</span>
+					</h2>
+					<p th:utext="#{site.help.about}"></p>
+					<h2 id="commands" class="help-title">
+						<a href="#commands" th:title="#{site.help.title.commands}">#</a>
+						<span th:text="#{site.help.title.commands}">User Commands</span>
 					</h2>
 					<p th:utext="#{site.help.command.digest}">/digest</p>
 					<p>
@@ -23,7 +28,7 @@
 					<p th:with="part=${#strings.replace(desc, '%message%', help.digestPerPage)}" th:utext="${#strings.replace(part, '%length%', help.digestLength)}"></p>
 					<p th:utext="#{site.help.command.rate}">/rate</p>
 					<p>
-						<img class="help-image" src="../static/image/help-digest.png" th:src="@{/image/help-digest.png}" alt="/rate comand output." th:alt="#{site.help.command.rate.alt}" th:title="#{site.help.command.rate.alt}"/>
+						<img class="help-image" src="../static/image/help-rate.png" th:src="@{/image/help-rate.png}" alt="/rate comand output." th:alt="#{site.help.command.rate.alt}" th:title="#{site.help.command.rate.alt}"/>
 					</p>
 					<p th:utext="#{site.help.command.rate.desc}"></p>
 					<p th:utext="#{site.help.command.chart}">/chart</p>
@@ -39,7 +44,7 @@
 						<img class="help-image" src="../static/image/help-subscribe.png" th:src="@{/image/help-subscribe.png}" alt="/subscribe comand output." th:alt="#{site.help.command.subscribe.alt}" th:title="#{site.help.command.subscribe.alt}"/>
 					</p>
 					<p th:utext="#{site.help.command.subscribe.desc}"></p>
-					<p th:utext="#{site.help.command.game}">/help</p>
+					<p th:utext="#{site.help.command.help}">/help</p>
 					<h2 id="admin-commands" class="help-title">
 						<a href="#admin-commands" th:title="#{site.help.title.admin}">#</a>
 						<span th:text="#{site.help.title.admin}">Admin Commands</span>
