Improve help page and properties file

--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -39,7 +39,7 @@
 					</h2>
 					<p th:utext="#{site.help.about}"></p>
 					<p>
-						<a href="#content" th:text="#{site.help.back}">Back to the Table of Contents</a>
+						<a href="#content" th:text="#{site.help.back}" th:title="#{site.help.back.title}">Back to the Table of Contents</a>
 					</p>
 					<h2 id="commands" class="help-title">
 						<a href="#commands" th:title="#{site.help.title.commands}">#</a>
@@ -70,7 +70,7 @@
 					<p th:utext="#{site.help.command.subscribe.desc}"></p>
 					<p th:utext="#{site.help.command.help}">/help</p>
 					<p>
-						<a href="#content" th:text="#{site.help.back}">Back to the Table of Contents</a>
+						<a href="#content" th:text="#{site.help.back}" th:title="#{site.help.back.title}">Back to the Table of Contents</a>
 					</p>
 					<h2 id="admin-commands" class="help-title">
 						<a href="#admin-commands" th:title="#{site.help.title.admin}">#</a>
@@ -82,7 +82,7 @@
 					</p>
 					<p th:utext="#{site.help.command.greeting.desc}"></p>
 					<p>
-						<a href="#content" th:text="#{site.help.back}">Back to the Table of Contents</a>
+						<a href="#content" th:text="#{site.help.back}" th:title="#{site.help.back.title}">Back to the Table of Contents</a>
 					</p>
 					<h2 id="owner-commands" class="help-title">
 						<a href="#owner-commands" th:title="#{site.help.title.owner}">#</a>
@@ -105,7 +105,7 @@
 					<p th:utext="#{site.help.command.debug.desc}"></p>
 					<p th:utext="#{site.help.command.info}">/info</p>
 					<p>
-						<a href="#content" th:text="#{site.help.back}">Back to the Table of Contents</a>
+						<a href="#content" th:text="#{site.help.back}" th:title="#{site.help.back.title}">Back to the Table of Contents</a>
 					</p>
 					<h2 id="other" class="help-title">
 						<a href="#other" th:title="#{site.help.title.other}">#</a>
@@ -119,7 +119,7 @@
 						</span>
 					</h2>
 					<p>
-						<a href="#content" th:text="#{site.help.back}">Back to the Table of Contents</a>
+						<a href="#content" th:text="#{site.help.back}" th:title="#{site.help.back.title}">Back to the Table of Contents</a>
 					</p>
 				</div>
 			</div>
