Fix some warnings and typos

--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -47,12 +47,12 @@
 					</h2>
 					<p th:utext="#{site.help.command.digest}">/digest</p>
 					<p>
-						<img class="help-image" src="../static/image/help-digest.png" th:src="@{/image/help-digest.png}" alt="/digest comand output." th:alt="#{site.help.command.digest.alt}" th:title="#{site.help.command.digest.alt}"/>
+						<img class="help-image" src="../static/image/help-digest.png" th:src="@{/image/help-digest.png}" alt="/digest command output." th:alt="#{site.help.command.digest.alt}" th:title="#{site.help.command.digest.alt}"/>
 					</p>
 					<p th:with="part=${#strings.replace(desc, '%message%', help.digestPerPage)}" th:utext="${#strings.replace(part, '%length%', help.digestLength)}"></p>
 					<p th:utext="#{site.help.command.rate}">/rate</p>
 					<p>
-						<img class="help-image" src="../static/image/help-rate.png" th:src="@{/image/help-rate.png}" alt="/rate comand output." th:alt="#{site.help.command.rate.alt}" th:title="#{site.help.command.rate.alt}"/>
+						<img class="help-image" src="../static/image/help-rate.png" th:src="@{/image/help-rate.png}" alt="/rate command output." th:alt="#{site.help.command.rate.alt}" th:title="#{site.help.command.rate.alt}"/>
 					</p>
 					<p th:utext="#{site.help.command.rate.desc}"></p>
 					<p th:utext="#{site.help.command.chart}">/chart</p>
@@ -60,12 +60,12 @@
 					<p th:utext="#{site.help.command.coffee}">/coffee</p>
 					<p th:utext="#{site.help.command.game}">/game</p>
 					<p>
-						<img class="help-image" src="../static/image/help-game.png" th:src="@{/image/help-game.png}" alt="/game comand output." th:alt="#{site.help.command.game.alt}" th:title="#{site.help.command.game.alt}"/>
+						<img class="help-image" src="../static/image/help-game.png" th:src="@{/image/help-game.png}" alt="/game command output." th:alt="#{site.help.command.game.alt}" th:title="#{site.help.command.game.alt}"/>
 					</p>
 					<p th:utext="#{site.help.command.game.desc}"></p>
 					<p th:utext="#{site.help.command.subscribe}">/subscribe</p>
 					<p>
-						<img class="help-image" src="../static/image/help-subscribe.png" th:src="@{/image/help-subscribe.png}" alt="/subscribe comand output." th:alt="#{site.help.command.subscribe.alt}" th:title="#{site.help.command.subscribe.alt}"/>
+						<img class="help-image" src="../static/image/help-subscribe.png" th:src="@{/image/help-subscribe.png}" alt="/subscribe command output." th:alt="#{site.help.command.subscribe.alt}" th:title="#{site.help.command.subscribe.alt}"/>
 					</p>
 					<p th:utext="#{site.help.command.subscribe.desc}"></p>
 					<p th:utext="#{site.help.command.help}">/help</p>
@@ -78,7 +78,7 @@
 					</h2>
 					<p th:utext="#{site.help.command.greeting}">/greeting</p>
 					<p>
-						<img class="help-image" src="../static/image/help-greeting.png" th:src="@{/image/help-greeting.png}" alt="/greeting comand output." th:alt="#{site.help.command.greeting.alt}" th:title="#{site.help.command.greeting.alt}"/>
+						<img class="help-image" src="../static/image/help-greeting.png" th:src="@{/image/help-greeting.png}" alt="/greeting command output." th:alt="#{site.help.command.greeting.alt}" th:title="#{site.help.command.greeting.alt}"/>
 					</p>
 					<p th:utext="#{site.help.command.greeting.desc}"></p>
 					<p>
@@ -91,7 +91,7 @@
 					<p th:utext="#{site.help.command.hello}">/hello</p>
 					<p th:utext="#{site.help.command.show}">/show</p>
 					<p>
-						<img class="help-image" src="../static/image/help-show.png" th:src="@{/image/help-show.png}" alt="/show comand output." th:alt="#{site.help.command.show.alt}" th:title="#{site.help.command.show.alt}"/>
+						<img class="help-image" src="../static/image/help-show.png" th:src="@{/image/help-show.png}" alt="/show command output." th:alt="#{site.help.command.show.alt}" th:title="#{site.help.command.show.alt}"/>
 					</p>
 					<p th:utext="#{site.help.command.show.desc}"></p>
 					<p th:utext="#{site.help.command.delete}">/delete</p>
@@ -100,7 +100,7 @@
 					<p th:utext="#{site.help.command.image}">/image</p>
 					<p th:utext="#{site.help.command.debug}">/debug</p>
 					<p>
-						<img class="help-image" src="../static/image/help-debug.png" th:src="@{/image/help-debug.png}" alt="/debug comand output." th:alt="#{site.help.command.debug.alt}" th:title="#{site.help.command.debug.alt}"/>
+						<img class="help-image" src="../static/image/help-debug.png" th:src="@{/image/help-debug.png}" alt="/debug command output." th:alt="#{site.help.command.debug.alt}" th:title="#{site.help.command.debug.alt}"/>
 					</p>
 					<p th:utext="#{site.help.command.debug.desc}"></p>
 					<p th:utext="#{site.help.command.info}">/info</p>
