--- a/src/main/resources/templates/flat.html
+++ b/src/main/resources/templates/flat.html
@@ -17,7 +17,7 @@
 								<h3 th:text="#{site.obey.flat.title}">Flat Service settings</h3>
 								<form th:action="@{/obey/flat/edit}" th:object="${flat}" th:method="post">
 									<div class="form-block">
-										<label for="variants" th:text="#{site.obey.flat.variants}">Max variants</label>
+										<label for="variants" th:text="#{site.obey.flat.variants}">Maximum variants</label>
 										<input id="variants" type="text" th:field="*{maxVariants}" size="60" th:placeholder="#{site.obey.flat.variants.number}"/>
 									</div>
 									<div class="form-block">
@@ -36,7 +36,7 @@
 										<textarea id="n1-view" class="send-text-field" rows="5" cols="80" th:field="*{viewN1Url}" th:placeholder="#{site.obey.flat.url}">Url Link</textarea>
 										<label for="n1-view" th:text="#{site.obey.flat.n1.view}">N1 View</label>
 									</div>
-									<p><input class="button" type="submit" value="Send" th:value="#{site.obey.send}"/></p>
+									<p><input class="button" type="submit" value="Send" th:value="#{site.obey.content.action.save}"/></p>
 								</form>
 							</div>
 							<div class="spring"></div>
