--- a/src/main/resources/templates/flat.html
+++ b/src/main/resources/templates/flat.html
@@ -17,27 +17,25 @@
 								<h3 th:text="#{site.obey.flat.title}">Flat Service settings</h3>
 								<form th:action="@{/obey/flat/edit}" th:object="${flat}" th:method="post">
 									<div class="form-block">
-										<label for="variants" th:text="#{site.obey.flat.variants}">Maximum variants:</label>
-										<input id="variants" type="text" th:field="*{maxVariants}" size="50" th:placeholder="#{site.obey.flat.variants.number}"/>
-									</div>
-									<div class="form-block">
 										<label for="subscribers" th:text="#{site.obey.flat.subscribers}">Subscriber Ids:</label>
-										<input id="subscribers" type="text" th:field="*{subscriberIds}" size="50" th:placeholder="#{site.obey.flat.subscribers.comma}"/>
+										<input id="subscribers" type="text" th:field="*{subscriberIds}" size="38" th:placeholder="#{site.obey.flat.subscribers.comma}"/>
+										<label for="variants" th:text="#{site.obey.flat.variants}">Maximum variants:</label>
+										<input id="variants" type="text" th:field="*{maxVariants}" size="5" th:placeholder="#{site.obey.flat.variants.number}"/>
 									</div>
 									<div class="form-block">
-										<textarea id="cian-api" class="send-text-field" rows="5" cols="80" th:field="*{apiCianUrl}" th:placeholder="#{site.obey.flat.url}">Url Link</textarea>
+										<textarea id="cian-api" class="send-text-field" rows="5" cols="80" th:field="*{apiCianUrl}" th:placeholder="#{site.obey.flat.url}">URL Link</textarea>
 										<label for="cian-api" th:text="#{site.obey.flat.cian.api}">CIAN API</label>
 									</div>
 									<div class="form-block">
-										<textarea id="n1-api" class="send-text-field" rows="5" cols="80" th:field="*{apiN1Url}" th:placeholder="#{site.obey.flat.url}">Url Link</textarea>
+										<textarea id="n1-api" class="send-text-field" rows="5" cols="80" th:field="*{apiN1Url}" th:placeholder="#{site.obey.flat.url}">URL Link</textarea>
 										<label for="n1-api" th:text="#{site.obey.flat.n1.api}">N1 API</label>
 									</div>
 									<div class="form-block">
-										<textarea id="cian-view" class="send-text-field" rows="5" cols="80" th:field="*{viewCianUrl}" th:placeholder="#{site.obey.flat.url}">Url Link</textarea>
+										<textarea id="cian-view" class="send-text-field" rows="5" cols="80" th:field="*{viewCianUrl}" th:placeholder="#{site.obey.flat.url}">URL Link</textarea>
 										<label for="cian-view" th:text="#{site.obey.flat.cian.view}">CIAN View</label>
 									</div>
 									<div class="form-block">
-										<textarea id="n1-view" class="send-text-field" rows="5" cols="80" th:field="*{viewN1Url}" th:placeholder="#{site.obey.flat.url}">Url Link</textarea>
+										<textarea id="n1-view" class="send-text-field" rows="5" cols="80" th:field="*{viewN1Url}" th:placeholder="#{site.obey.flat.url}">URL Link</textarea>
 										<label for="n1-view" th:text="#{site.obey.flat.n1.view}">N1 View</label>
 									</div>
 									<p><input class="button" type="submit" value="Send" th:value="#{site.obey.content.action.save}"/></p>
