Fix layout for macOS

--- a/src/main/resources/templates/participant.html
+++ b/src/main/resources/templates/participant.html
@@ -25,7 +25,7 @@
 									<input id="user-checkbox" type="checkbox" th:field="*{enabled}"/>
 									<label for="user-checkbox" th:text="#{site.obey.content.enabled}">Enabled</label>
 									<input type="hidden" th:field="*{id}"/>
-									<input class="button" type="submit" value="Add" th:value="${update ? edit : add}"/>
+									<input class="button button-margin-top" type="submit" value="Add" th:value="${update ? edit : add}"/>
 								</div>
 							</form>
 						</div>
