Drop Morning Worker

--- a/src/main/resources/templates/obey.html
+++ b/src/main/resources/templates/obey.html
@@ -27,7 +27,7 @@
 						<p>
 							<a href="/obey/callback" th:text="#{site.obey.digest.callback}">Clear Callback Queries Map</a>
 							(<span th:text="#{site.obey.digest.callback.size}">Size:</span> <span th:text="${callbackQueriesMapSize}">0</span>) |
-							<a href="/obey/morning" th:text="#{site.obey.digest.morning}">Send Good Morning phrase</a> |
+							<a href="/obey/birthday" th:text="#{site.obey.digest.birthday}">Send MotoFan.Ru birthdays</a> |
 							<a href="/obey/shredder" th:text="#{site.obey.digest.shredder}">Drop Obsolete Digests</a>
 						</p>
 						<div th:replace="~{digest :: digest-form}"></div>
